force-app/main/default/objects/Tabla_AUX__c/Tabla_AUX__c.object-meta.xml
<CustomObject>
    <label>Tabla AUX</label>
    <nameField>
        <displayFormat>AUX-{00000}</displayFormat>
        <label>Correlativo Tabla AUX</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla AUX</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>