force-app/main/default/objects/Tabla_AUX__c/fields/Discount_Prime_if_don_t_match_Grade__c.field-meta.xml
<CustomField>
    <fullName>Discount_Prime_if_don_t_match_Grade__c</fullName>
    <label>Discount/Prime if don&apos;t match Grade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>