force-app/main/default/objects/Tabla_AUX__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>No es necesario mostrar en pantalla, se usa para decidir si se aplica prima o descuento en cotizacion</description>
    <formula>RIGHT(Index__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica el grado del indice.</inlineHelpText>
    <label>Grade</label>
    <type>Text</type>
</CustomField>