force-app/main/default/objects/Tabla_AUX__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quality_Grade__c</columns>
    <columns>Discount_Prime_if_Match_Grade__c</columns>
    <columns>Discount_Prime_if_don_t_match_Grade__c</columns>
    <columns>Index__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>